# recyclick

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/craftingfuture/recyclick/: MainActivity.kt
backend/ewaste/: main.py  pyproject.toml
backend/ewaste/image_classifier/: main.py
backend/ewaste/web/: package.json
backend/ewaste/web/src/: app.css
backend/ewaste/web/src/routes/: +layout.svelte  +page.svelte
backend/ewaste/web/src/routes/dashboard/: +page.svelte  About.svelte
backend/ewaste/web/src/routes/login/: +page.svelte
backend/ewaste/web/src/routes/signup/: +page.svelte
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Api Service/: api_service.dart
lib/screens/: account_type.dart  add_item.dart  device_selection.dart  image_upload.dart  login.dart  order_confirm.dart  product_details.dart  product_specs.dart  user_navigation.dart  user_signup.dart
lib/screens/users/: add_item.dart  device_selection.dart  home.dart  image_upload.dart  order_confirm.dart  product_details.dart  product_specs.dart  tracking.dart  user_navigation.dart  user_profile.dart  user_signup.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
