[project]
name = "ewaste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "ollama>=0.4.7",
    "pillow>=11.1.0",
    "pymongo>=4.11.3",
    "python-multipart>=0.0.20",
    "scipy>=1.15.2",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.0",
]
